CSS styling for style-2 verse-picker

--- a/living_word_ui/living_word_ui.css
+++ b/living_word_ui/living_word_ui.css
@@ -21,4 +21,88 @@
 	/*display:none;*/   /*  we could potentially hide those entries without any lwcs linked to them */
 }
 
+.verse-picker-style-2 .scripture-translation,
+.verse-picker-style-2 .scripture-book {  
+	display:none 
+} /* hide the original form element.   We are still using some aspects of this - so we are simply hiding this */
+
+/* alternative widget for selecting scripture - normal HTML, not form elements.   Regular form elements hidden. */
+.scripture-translation-alt,
+.scripture-book-alt {
+	background-color : #dddddd;
+	display : inline-block;
+	padding : 5px;
+	border-radius : 5px;
+	margin : 2px;
+}
+
+/* table-style lookup window */
+.scripture-translation-selector,
+.scripture-book-selector
+ {
+    position: absolute;
+	z-index : 1;
+    float: none;
+    display: none;  /* block after unhiding! */
+    clear: both;
+    border: 1px solid black;
+    padding: 5px;
+    background-color: white;
+    width: 400px;
+}
+
+/*
+.scripture-translation-selector:before {
+    content: "×";
+}
+*/
+
+/* multiple columns */
+.scripture-book-selector {
+    -webkit-column-count:3;
+    -moz-column-count:3;
+    -ms-column-count:3;
+    -o-column-count:3;
+    column-count:3;
+    -webkit-column-gap:15px;
+    -moz-column-gap:15px;
+    -ms-column-gap:15px;
+    -o-column-gap:15px;
+    column-gap:15px;
+    columns:3;
+}
+
+.scripture-translation-selector ul,
+.region-content .scripture-translation-selector ul,
+.scripture-book-selector ul {
+    list-style: none;
+	padding : 0px;
+	margin : 0px;
+}
+
+.scripture-translation-selector ul li,
+.scripture-book-selector ul li {
+    display: table;
+}
+
+.scripture-translation-selector ul li:hover,
+.scripture-book-selector ul li:hover {
+    background: #dddddd;
+}
+
+.scripture-translation-selector .transabbr {
+    display: inline-block;
+    width: 50px;
+}
+
+.scripture-translation-selector .transdesc {
+    display: inline-block;
+    width: 330px;
+}
+
+/* hide the bookID */
+.scripture-book-selector .bookid	{
+		display: none;
+}
+
 
