--- a/living_word_ui/living_word_ui.css
+++ b/living_word_ui/living_word_ui.css
@@ -48,7 +48,7 @@
     border: 1px solid black;
     padding: 5px;
     background-color: white;
-    width: 400px;
+    min-width: 400px;
 }
 
 /* multiple columns */
@@ -66,18 +66,66 @@
     columns:3;
 }
 
+/*verse-picker chapter&verse selector outer class */
+.scripture-chapter-selector {
+	
+}
+
+.scripture-verse-pane.activepane .scripture-verse-pane-heading {
+	font-weight : bold;
+}
+
+
+.scripture-verse-picker-chapter,
+.scripture-verse-picker-vers
+ {
+	/* left-most element in the verse-picker, spanning both heading and chapters */
+	display : inline-block;
+}
+
+.scripture-verse-pane {
+	max-width : 30%;
+	overflow-y : hidden;  /* shows a scroll-bar */
+	vertical-align : top;
+	display : inline-block;
+}
+.scripture-verse-pane.activepane {
+	min-width : 60%;   /* need to leave a bit for margin etc. */   
+	overflow-y : visible;
+}
+
+.scripture-chapter-selector table {
+	width : 10%   /* as small as possible */
+}
+
+.scripture-chapter-selector td {
+	text-align : center; 
+	padding : 4px 6px;    /* default is 4 9 which is too much */
+	margin : 4px;
+	border : 2px solid #fff;  /* white */
+	max-width : 25px;    /* check psalms and specifically psalm 119 here */
+}
+
+.scripture-chapter-selector td.selected,
+.scripture-chapter-selector td.selected:hover {
+	background-color : #F0E68C;   /* khakish */
+}
+
 /* the .region-content portion added explicitly so that the .region-content ul style does not overwrite this */
 .scripture-translation-selector ul,
 .scripture-book-selector ul,
 .region-content .scripture-translation-selector ul,
-.region-content .scripture-book-selector ul {
+.region-content .scripture-book-selector ul  {
     list-style: none;
 	padding : 0px;
 	margin : 0px;
 }
 
+/* hover mouse over options for verse-picker */
 .scripture-translation-selector ul li:hover,
-.scripture-book-selector ul li:hover {
+.scripture-book-selector ul li:hover,
+.scripture-chapter-selector td:hover
+ {
     background: #dddddd;
 }
 
